[FIX] fivealive-lite theme: missing background color for module titles when modules too wide
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@56390 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/fivealive-lite.css
+++ b/styles/fivealive-lite.css
@@ -581,7 +581,7 @@ h3.box-title,
 	font-weight: 500;
 	border-radius: 6px;
 	color: #fff;
-	background: url(fivealive/options/blueberry/siteheader.jpg) no-repeat -260px -200px;
+	background: #28A7DE url(fivealive/options/blueberry/siteheader.jpg) no-repeat -260px -200px;
 	border-radius: 6px;
 	min-height: 20px;
 }
